wip standard convs